# fishify

./: readme.md
bot/: readme.md
bot/src/: commands.rs
cli/: Cargo.toml  readme.md
cli/src/: cli.rs  main.rs
fishify-bot/: Cargo.toml  readme.md
fishify-bot/src/: commands.rs  main.rs
fishify-cli/: Cargo.toml  readme.md
fishify-cli/src/: cli.rs  main.rs
fishify-lib/: Cargo.toml
fishify-lib/src/: config.rs  lib.rs  model.rs  spotify.rs
lib/src/: lib.rs  model.rs
