[package]
name = "fishicord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fishify-lib = { path = "../fishify-lib" }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
rspotify = { version = "0.11.7", features = ["cli"] }
anyhow = "1.0.71"
