[package]
name = "fishify-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
dirs = "5.0.1"
rspotify = { version = "0.11.7", features = ["cli"] }
serde = { version = "1.0.164",  features = ["derive"] }
serde_yaml = "0.9.21"
time = "0.1.45"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
